[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorflow_time_series_dataset"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache Software License (Apache 2.0)"}
classifiers = [
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development",
]
dependencies = [
        "tensorflow~=2.5",
        "pandas>=1.1.0",
        "matplotlib~=3.6"
]
dynamic = ["version"]

[project.optional-dependencies]
develop = [
    'autoflake',
    'black',
    'isort',
    'pre-commit',
    'pytest',
    'python-lsp-black',
    'python-lsp-server[all]',
]

[tool.setuptools.dynamic]
version = {attr = "tensorflow_time_series_dataset.__version__"}

[tool.autoflake]
check = true
expand-star-imports = true
remove-unused-variables = true
ignore-init-module-imports = true
remove-all-unused-imports = true

[tool.isort]
profile = "black"
