[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61", "setuptools_scm>=7"]

[project]
classifiers = [
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development"
]
dependencies = [
  "tensorflow>1",
  "pandas>=1.1.0",
  "matplotlib>=3.5"
]
dynamic = ["version"]
license = {text = "Apache Software License (Apache 2.0)"}
name = "tensorflow_time_series_dataset"
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
develop = [
  'tensorflow_time_series_dataset[test]',
  'commitizen',
  'ipykernel',
  'pre-commit',
  'python-lsp-ruff',
  'python-lsp-server[all]',
  'ruff'
]
docs = [
  'tensorflow_time_series_dataset[test]',
  'pdoc'
]
test = [
  'pytest',
  'pytest-xdist'
]

[project.urls]
Changelog = "https://github.com/MArpogaus/tensorflow_time_series_dataset/blob/dev/CHANGELOG.md"
Documentation = "https://marpogaus.github.io/tensorflow_time_series_dataset"
Issues = "https://github.com/MArpogaus/tensorflow_time_series_dataset/issues"
Repository = "https://github.com/MArpogaus/tensorflow_time_series_dataset"

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "scm"
version_scheme = "pep440"

[tool.ruff]
indent-width = 4
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = ["I", "E", "F"]

[tool.setuptools_scm]
# https://stackoverflow.com/a/74404703
# omits local version, useful because pypi does not support it
local_scheme = "no-local-version"
